crates/artemis_app/src/snapshots/artemis_app__operation__tests__fs_read_with_truncation_path.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<file
  path="/home/user/large_file.txt"
  display_lines="1-100"
  total_lines="200"
><![CDATA[1:Truncated content]]>
</file>
