crates/artemis_app/src/snapshots/artemis_app__operation__tests__fs_remove_success.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<file_removed
  path="/home/user/file_to_delete.txt"
  status="completed"
>
</file_removed>
