crates/artemis_app/src/snapshots/artemis_app__operation__tests__fs_search_min_lines_but_max_line_length.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="1049"
  total_lines="50"
  display_lines="1-8"
  pattern="search"
  glob="*.txt"
  reason="Results truncated due to exceeding the 1049 bytes size limit. Please use a more specific search pattern"
><![CDATA[foo.txt:1:Match line 1: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:2:Match line 2: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:3:Match line 3: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:4:Match line 4: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:5:Match line 5: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:6:Match line 6: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:7:Match line 7: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:8:Match line 8: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB]]>
</search_results>
