crates/artemis_app/src/snapshots/artemis_app__operation__tests__fs_search_no_results.snap
---
source: crates/artemis_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  pattern="NonExistentPattern"
>
</search_results>
